[package]
name = "inputflow-kmbox"
version = "0.1.0"
authors = ["ConnorBP <Connor.Postma@gmail.com>"]
edition = "2021"
description = "KMBox plugin for the inputflow framework"
readme = "../README.md"
repository = "https://github.com/ConnorBP/inputflow"
license = "MIT"
keywords = [ "inputflow", "api", "arduino", "dma", "kmbox", "serial" ]
categories = [ "api-bindings" ]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
# inputflow api base
inputflow = { version = "*", path = "../inputflow"}
# cross-platform serial communication library
serialport = "4.4"
# input argument parsing
serde = "1.0"
ron = "0.8"

[features]
plugins = ["inputflow/plugins"]