[package]
name = "inputflow-kmbox"
version = "0.1.0"
authors = ["ConnorBP <Connor.Postma@gmail.com>"]
edition = "2021"
description = "KMBox plugin for the inputflow framework"
readme = "README.md"
repository = "https://github.com/ConnorBP/inputflow"
license = "MIT"
keywords = ["inputflow", "api", "arduino", "dma", "kmbox", "serial"]
categories = ["api-bindings"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
# inputflow api base
inputflow = { version = "0.1", path = "../inputflow" }
# cross-platform serial communication library
serialport = "4.4"
# format a byte string (ascii) for serial output
format-bytes = "0.3"
# allow .as_bytes() on most types
dataview = "1.0"
# input argument parsing
serde = "1.0"
ron = "0.8"
# logging
log = { version = "0.4", default-features = false }
env_logger = "0.11.0"

[features]
plugins = ["inputflow/plugins"]
