[package]
name = "inputflow-qmp"
version = "0.1.0"
authors = ["ConnorBP <Connor.Postma@gmail.com>"]
edition = "2021"
description = "inputflow user input abstract plugin framework"
readme = "README.md"
repository = "https://github.com/ConnorBP/inputflow"
license = "MIT"
keywords = [ "inputflow", "api", "kvm", "qemu" ]
categories = [ "api-bindings" ]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
inputflow = { version = "0.1", path = "../inputflow" }
serde = "1.0"
serde_json = "1.0"
ron = "0.9"
log = { version = "0.4", default-features = false }
env_logger = "0.11.0"

[features]
plugins = ["inputflow/plugins"]